logic for date and time immproved

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 
     <link rel="icon" type="image" href="./media/icon2.png">
-    <title>Weather App</title>
+    <title>The Weather (by vikas)</title>
 </head>
 <body>
     <!-- tem indication area start -->
