--- a/index.html
+++ b/index.html
@@ -16,11 +16,19 @@
     <title>The Weather (by vikas)</title>
 </head>
 <body>
+    <div id="blurScreen"></div>
+    <div id="indipendent">
+        <div class="inner">
+            <img id="indiLogo" src="./media/day/AzadiLogo.jpg">
+        </div>
+    </div>
+
+
     <!-- tem indication area start -->
-    <div class="weather_app">
+    <div  class="weather_app">
         <div class="container">
             <div class="brand">
-                <h2>The Weather</h2>
+                <h2 id="logoTag"><span>The</span> <span>Wea</span><span>ther </span> <span><img src="./media/day/India.png" width="25px"></span></h2>
                 <h6>by Vikas Harge</h6>
             </div>
             <div class="temp_container">
@@ -87,7 +95,6 @@
 
 
     <script src="./index.js"></script>
-
     
 </body>
 </html>
